Fixes some CSS styles
Adds overflow:hidden to body element to fix scrollbars appearing on transitions.
Removes overflow:hidden from app buttons and app button list to avoid app names being truncated on non supported aspect ratios.

--- a/src/sass/_mod_applauncher.scss
+++ b/src/sass/_mod_applauncher.scss
@@ -3,6 +3,7 @@ $tr-open-app-len: 1s;
 
 body {
   transition: background-color 1s;
+  overflow: hidden;
 }
 
 body.app-open {
